--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <h1>Interpolacion de Large</h1>
-    <p class="autores">Diego Cadena & Sebastian Valencia</p>
+    <p class="autores">Sebastian Valencia</p>
 
     <form class="form">
         <div class="tabla">
